excluded nowrap from the change log list in the issue-show view
git-svn-id: file:///var/lib/codepot/svnrepo/codepot/trunk@89 acb928ee-5b15-407b-8704-3b33df051210

--- a/codepot/src/css/issue.css
+++ b/codepot/src/css/issue.css
@@ -151,7 +151,7 @@
 }
 
 #issue_show_mainarea_changes_table td.details {
-	white-space: nowrap;
+	/*white-space: nowrap;*/
 	vertical-align: top;
 	padding-top: 0.2em;
 	padding-bottom: 0.2em;
